k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tezca
  labels:
    app.kubernetes.io/part-of: tezca
    enclii.dev/type: application
